add i11 fine and fixed some bug

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
     <!--Custom css-->
     <link rel="stylesheet" href="main/css/style.css">
+    <link rel="stylesheet" href="main/css/i11.css">
     <link rel="stylesheet" href="main/css/color.css">
     <link rel="stylesheet" href="vendor/others/css/animate.css">
     <link rel="stylesheet" href="vendor/others/css/owl.theme.default.min.css">
@@ -212,9 +213,7 @@
                     <div class="row">
                         <div class="section-head col-sm-12">
                             <h3 class="heading-title text-center pb-4">What We Do ?</h3>
-                            <p class="section-lead text-center pb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nisl augue, feugiat non hendrerit quis, pellentesque et dui. Integer nisi ligula, aliquet ac ullamcorper non, scelerisque mattis nisi. Maecenas volutpat bibendum
-                                consequat.
-                            </p>
+
                         </div>
                         <!-- Column -->
                         <div class="col-md-4 wrap-service11-box">
@@ -331,6 +330,88 @@
                                     <h5 class="card-title linking mt-3 mb-3">Anti Aging</h5>
                                     <p class="card-text">Wrinkles can be caused by many factors like age, worries,or medicine reaction. Wrinkles can be removed with cosmetic treatments or in some cases with anti-aging cream.</p>
                                     <a href="#" title="Read More" class="btn-text mt-1">Know more <i class="fas fa-angle-double-right"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- gallery -->
+            <!--What we do section-->
+            <div class="service-wd section-wt">
+                <div class="container py-1">
+                    <!-- Row  -->
+                    <div class="row">
+                        <div class="section-head col-sm-12">
+                            <h3 class="heading-title text-center pb-4">Before After Gallery</h3>
+                        </div>
+                        <!-- Column -->
+                        <div class="col-lg-4 col-md-6 col-sm-6 item">
+                            <div class="card item-card card-block">
+                                <div class="">
+                                    <!-- <h4 class="card-title text-right"><i class="material-icons">settings</i></h4> -->
+                                    <img src="main/images/homepage/before-9.jpg" class="gallery1" alt="Photo of sunset">
+                                    <img src="main/images/homepage/after-9.jpg" class="gallery1" alt="Photo of sunset">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Column -->
+                        <div class="col-lg-4 col-md-6 col-sm-6 item">
+                            <div class="card item-card card-block">
+                                <!-- <h4 class="item-card-title text-right"><i class="material-icons">settings</i></h4> -->
+                                <div class="">
+                                    <img src="main/images/homepage/before-2.jpg" class="gallery1" alt="Photo of sunset">
+                                    <img src="main/images/homepage/after-2.jpg" class="gallery1" alt="Photo of sunset">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Column -->
+                        <div class="col-lg-4 col-md-6 col-sm-6 item">
+                            <div class="card item-card card-block">
+                                <!-- <h4 class="item-card-title text-right"><i class="material-icons">settings</i></h4> -->
+                                <div class="">
+                                    <img src="main/images/homepage/before-3.jpg" class="gallery1" alt="Photo of sunset">
+                                    <img src="main/images/homepage/after-3.jpg" class="gallery1" alt="Photo of sunset">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-6 item">
+                            <div class="card item-card card-block">
+                                <div class="">
+                                    <img src="main/images/homepage/before-4.jpg" class="gallery1" alt="Photo of sunset">
+                                    <img src="main/images/homepage/after-4.jpg" class="gallery1" alt="Photo of sunset">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-6 item">
+                            <div class="card item-card card-block">
+                                <div class="">
+                                    <img src="main/images/homepage/before-5.jpg" class="gallery1" alt="Photo of sunset">
+                                    <img src="main/images/homepage/after-5.jpg" class="gallery1" alt="Photo of sunset">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-6 item">
+                            <div class="card item-card card-block">
+                                <div class="">
+                                    <img src="main/images/homepage/before-6.jpg" class="gallery1" alt="Photo of sunset">
+                                    <img src="main/images/homepage/after-6.jpg" class="gallery1" alt="Photo of sunset">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-6 item">
+                            <div class="card item-card card-block">
+                                <div class="">
+                                    <img src="main/images/homepage/before-7.jpg" class="gallery1" alt="Photo of sunset">
+                                    <img src="main/images/homepage/after-7.jpg" class="gallery1" alt="Photo of sunset">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-6 item">
+                            <div class="card item-card card-block">
+                                <div class="">
+                                    <img src="main/images/homepage/before-8.jpg" class="gallery1" alt="Photo of sunset">
+                                    <img src="main/images/homepage/after-8.jpg" class="gallery1" alt="Photo of sunset">
                                 </div>
                             </div>
                         </div>
