--- a/index2.html
+++ b/index2.html
@@ -2,15 +2,22 @@
 <html lang="en">
 
 <head>
-    <title>medical website</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" href="" type="image/png" sizes="16x16">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Cosmetologist in Noida- Looking Best Doctor for Cosmetic Treatments then you are right place. Dr. Chitra Rathi is one of the best Cosmetologist in Noida">
+    <meta name="author" content="Dr. Chitra Rathi">
+    <meta name="format-detection" content="telephone=no">
+    <title>Best Dermatologist & Cosmetologist in Noida | Dr. Chitra Rathi</title>
+
+    <!--Favicon-->
+    <link rel="icon" href="main/images/icon/favicon.png" type="image/x-icon" size="">
     <!--Bootstrap css-->
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
     <!--Custom css-->
     <link rel="stylesheet" href="main/css/style.css">
+    <link rel="stylesheet" href="main/css/i11.css">
+    <link rel="stylesheet" href="main/css/color.css">
     <link rel="stylesheet" href="vendor/others/css/animate.css">
     <link rel="stylesheet" href="vendor/others/css/owl.theme.default.min.css">
     <!--Font family-->
@@ -22,11 +29,35 @@
 
         <div class="hero-anime">
             <div class="navigation-wrap start-header start-style ">
+                <div style="background-color: #002c60; color:#fff; padding : 10px 0px;">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-4 ">
+                                <h6 class="header-top"><i class="fas fa-phone-alt"></i>&nbsp; +91 8750099998</h6>
+
+                            </div>
+                            <!-- <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                                <h6 class="header-top"><i class="fas fa-phone-alt"></i>&nbsp; +91 96257 58634</h6>
+                            </div> -->
+                            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-4">
+                                <h6 class="header-top"><i class="fas fa-map-marked"></i>&nbsp; Noida Sector 137,UP 201305</h6>
+
+                            </div>
+                            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-4">
+                                <h6 class="header-top">
+                                    <i class="fas fa-envelope-open-text"></i>
+                                    <a href="#" class="social-linking">&nbsp; info@dermaaesthetic.org</a>
+                                </h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="container">
                     <div class="row">
+
                         <div class="col-12">
                             <nav class="navbar navbar-expand-md navbar-light">
-                                <a class="navbar-brand" href="index.html"><img src="" alt="company logo"></a>
+                                <a class="navbar-brand" href="index.html"><img src="main/images/icon/logo.png" alt="company logo"></a>
                                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
@@ -34,33 +65,25 @@
                                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                     <ul class="navbar-nav ml-auto px-3 py-4 py-md-0">
                                         <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                            <a class="nav-link" href="#">About us</a>
+                                            <a class="nav-link" href="index2.html">Home</a>
                                         </li>
                                         <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                            <a class="nav-link" href="#">Contact us</a>
+                                            <a class="nav-link" href="about-us.html">About Us</a>
                                         </li>
-                                        <!-- <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">What we do</a>
+                                        <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="" role="button" aria-haspopup="true" aria-expanded="false">Treatments & Services</a>
                                             <div class="dropdown-menu">
-                                                <a class="dropdown-item" href="#">Our Technology Help you</a>
-                                                <a class="dropdown-item" href="#">Interactive</a>
+                                                <a class="dropdown-item" href="cosmetic.html">Cosmetic Treatments</a>
+                                                <a class="dropdown-item" href="moles-skin.html">Moles & Skin</a>
+                                                <a class="dropdown-item" href="skin-hair-nail.html">Skin Hair and Nail</a>
+                                                <a class="dropdown-item" href="wrinkles-and-lines.html">Wrinkles and Lines</a>
                                             </div>
-                                        </li> -->
-                                        <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                            <a class="nav-link" href="#">Career</a>
                                         </li>
                                         <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                            <a class="nav-link" href="#">Blog</a>
+                                            <a class="nav-link" href="gallery.html">Gallery</a>
                                         </li>
                                         <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                            <a class="nav-link" href="#">Services</a>
-                                        </li>
-                                        <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Login</a>
-                                            <div class="dropdown-menu">
-                                                <a class="dropdown-item" href="#"> Help us</a>
-                                                <a class="dropdown-item" href="#">registration</a>
-                                            </div>
+                                            <a class="nav-link" href="contact-us.html">Contact Us</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -83,7 +106,7 @@
                     <div class="carousel-item" style="background-image: url('main/images/homepage/banner2.jpg'); background-size: cover;">
                         <div class="caption">
                             <h1>Create and share your whatever</h1>
-                            <h2>Make it easy for you to do whatever this thing does.</h2>
+                            <h2>One of the Best & Leading Cosmetologist</h2>
                         </div>
                     </div>
                     <div class="carousel-item" style="background-image: url('main/images/homepage/7.jpg'); background-size: cover;">
@@ -110,6 +133,19 @@
                 </a>
 
             </div>
+            <!--sticky sidebar-->
+            <div class="csquare feedback-popup">
+                <a href="#" class="float-right close-feedback" id="closeFeedbackPopup">
+              &times;
+            </a>
+                <div class="notification-info">Are You Happy With Your Practice Collection?
+                    <div class="row col-md-12">
+                        <button class="btn-small btn-orange confirmButton" id="openNotify">Yes</button>
+                        <button class="btn-small btn-orange cancelButton" id="closeFeedback">No</button>
+                    </div>
+                </div>
+            </div>
+            <!--end stickybar-->
             <!--new block-->
             <div class="container-fluid">
                 <div class="row">
@@ -268,7 +304,7 @@
                                     <div class="widget-about">
                                         <img src="" alt="company logo" class="img-fluid">
                                         <!-- <h6 class="text-grey">WHY US?</h6> -->
-                                        <p>simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever Lorem Ipsum has been the industry's standard dummy text ever
+                                        <p>Dr Chitra is one of the best Dermatologist & Cosmetologist in Noida. she has 20 years experience.she has working experience of working with NGO(WHO,USAID etc)in the area of public health.
                                         </p>
                                     </div>
                                 </div>
@@ -278,11 +314,14 @@
                             <div class="col-md-4 col-sm-4">
                                 <div class="footer-widget wow fadeInDown" data-wow-delay="0.2s">
                                     <div class="footer-menu footer-menu--1 ">
-                                        <h4 class=" footer-widget-title border-link">Quick Links</h4>
-                                        <a href="#">About us</a>
-                                        <a href="#">Statistical Analysis</a>
-                                        <a href="#">What we do</a>
-                                        <a href="#">Careers</a>
+                                        <h2 class="footer-widget-title border-link">Quick Link</h2>
+                                        <a href="Cosmetic.html">Cosmetic Treatments</a>
+                                        <a href="moles-skin.html">Moles And Skin</a>
+                                        <a href="skin-hair-nail.html">Skin, Hair and Nail</a>
+                                        <a href="wrinkles-and-lines.html">Wrinkles and Lines</a>
+                                        <a href="about-us.html">About Us</a>
+                                        <a href="contact-us.html">Contact Us</a>
+                                        <a href="enquiry.html">Enquiry</a>
                                     </div>
                                     <!-- end /.footer-menu -->
                                 </div>
@@ -292,16 +331,15 @@
 
                             <div class="col-md-4 col-sm-4 ">
                                 <div class="contact-widget wow fadeInDown" data-wow-delay="0.4s">
-                                    <h4 class="footer-widget-title border-link">Contact us</h4>
-                                    <p><i class="fas fa-map-marked"></i>&nbsp;B-9, Udaigiri – II, Sector – 34,Noida, G.B. Nagar, Uttar Pradesh, India – 201307</p>
-                                    <p><i class="fas fa-phone-alt"></i>&nbsp; +91-9871587820</p>
-                                    <p>
-                                        <i class="fas fa-globe-americas"></i>
-                                        <a href="#" class="social-linking">&nbsp; www.kanvan.in</a>
-                                    </p>
+                                    <h2 class="footer-widget-title border-link">Contact us</h2>
+                                    <p><i class="fas fa-map-marked"></i>&nbsp; Derma Aesthetic Clinic <br> Paras Tierea,commercial complex 2, shop number 18 GF Sector 137, Sector branch I, Sector 168, Noida, Uttar Pradesh 201305</p>
+                                    <p><i class="fas fa-phone-alt"></i>&nbsp; +91-8750099998 </p>
+                                    <p><i class="fas fa-map-marker-alt"></i><a href="https://www.google.com/maps/place/Dr+Chitra(Derma+Aesthetics+Skin+,+Hair+%26+Laser+clinic+)/@28.506417,77.409304,16z/data=!4m5!3m4!1s0x0:0x3a827cd91fb2858f!8m2!3d28.5064173!4d77.4093035?hl=en">&nbsp; Get Directions on this map</a></p>
+                                    <p><i class="fas fa-phone-alt"></i>&nbsp; +91-9625758634 <br> (24/7 General inquiry)</p>
+
                                     <p>
                                         <i class="fas fa-envelope-open-text"></i>
-                                        <a href="#" class="social-linking">&nbsp; info@kanvan.in</a>
+                                        <a href="#" class="social-linking">dermaaesthetic111@gmail.com</a>
                                     </p>
                                 </div>
                                 <div class="footer-widget wow fadeInDown" data-wow-delay="0.5s">
