--- a/contact-us.html
+++ b/contact-us.html
@@ -324,10 +324,10 @@
                             <div class="footer-widget wow fadeInDown" data-wow-delay="0.3s">
                                 <div class="footer-menu ">
                                     <h2 class="footer-widget-title border-link">Quick Link</h2>
-                                    <a href="#">Cosmetic Treatments</a>
-                                    <a href="#">Moles And Skin</a>
-                                    <a href="#">Skin, Hair and Nail</a>
-                                    <a href="#">Wrinkles and Lines</a>
+                                    <a href="Cosmetic.html">Cosmetic Treatments</a>
+                                    <a href="moles-skin.html">Moles And Skin</a>
+                                    <a href="skin-hair-nail.html">Skin, Hair and Nail</a>
+                                    <a href="wrinkles-and-lines.html">Wrinkles and Lines</a>
                                     <a href="about-us.html">About Us</a>
                                     <a href="contact-us.html">Contact Us</a>
                                     <a href="enquiry.html">Enquiry</a>
@@ -348,7 +348,7 @@
 
                                 <p>
                                     <i class="fas fa-envelope-open-text"></i>
-                                    <a href="#" class="social-linking">dermaaesthetic111@gmail.com</a>
+                                    <a href="#" class="social-linking">&nbsp; dermaaesthetic111@gmail.com</a>
                                 </p>
                             </div>
 
