--- a/gallery.html
+++ b/gallery.html
@@ -244,7 +244,7 @@
 
                                 <p>
                                     <i class="fas fa-envelope-open-text"></i>
-                                    <a href="#" class="social-linking">dermaaesthetic111@gmail.com</a>
+                                    <a href="#" class="social-linking">&nbsp; dermaaesthetic111@gmail.com</a>
                                 </p>
                             </div>
 
