--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 p-0">
-                        <a href="billing.html">
+                        <a href="">
                             <div class="box-part text-center">
                                 <img src="main/fonts/block/9.png" class="block-img pb-3" alt="Medical Billing Services">
                                 <div class="pt-2 pb-3">
@@ -170,7 +170,7 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 p-0">
-                        <a href="training.html">
+                        <a href="">
                             <div class="box-part3 text-center">
                                 <img src="main/fonts/block/11.png" class="block-img pb-3" alt="Revenue Cycle Management">
                                 <div class="pt-2 pb-3">
@@ -180,7 +180,7 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 p-0">
-                        <a href="denielmanagement.html">
+                        <a href="">
                             <div class="box-part text-center">
                                 <img src="main/fonts/block/12.png" class="block-img pb-3" alt="AMBULATORY SURGICAL CENTERS Billing Services">
                                 <div class="pt-2 pb-3">
@@ -214,7 +214,7 @@
                             <p class="mt-2">Just like your neighbor, friends, and relatives, you can also enjoy your daily life with the glowing skin and long thick hair with the help of the best Cosmetic Treatmentsat Derma Aesthetic. Book a visit today, and start to
                                 live your life with scar-free skin all-day. Good Luck!.</p>
 
-                            <a href="" class="btn-text">Booking a visit →</a>
+                            <a href="enquiry.html" class="btn-text">Booking a visit →</a>
                         </div>
                         <div class="col-md-6">
                             <img src="main/images/homepage/shop.jpg" alt=".." class="img-fluid img-bg mt-2 wow fadeInLeft" data-wow-delay="0.2s">
@@ -511,7 +511,7 @@
 
                                     <p>
                                         <i class="fas fa-envelope-open-text"></i>
-                                        <a href="#" class="social-linking">dermaaesthetic111@gmail.com</a>
+                                        <a href="#" class="social-linking">&nbsp; dermaaesthetic111@gmail.com</a>
                                     </p>
                                 </div>
 
