--- a/skin-hair-nail.html
+++ b/skin-hair-nail.html
@@ -203,7 +203,7 @@
 
                                 <p>
                                     <i class="fas fa-envelope-open-text"></i>
-                                    <a href="#" class="social-linking">dermaaesthetic111@gmail.com</a>
+                                    <a href="#" class="social-linking">&nbsp; dermaaesthetic111@gmail.com</a>
                                 </p>
                             </div>
 
